实现前端加载资源，路径配置有关！重点关注！

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ server.servlet.context-path=/Sqlserver_springboot
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 #非严格检查
-spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
