实现前端视频、图片加载，springboot约定大约、高于配置。 配置文件没有生效，通过@Configuration配置文件生效的。static静态资源路径。 下一步骤研究配置，外部资源加载，以及优化目前的加载方式！

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.thymeleaf.cache=false
 #静态文件请求配置方式
 spring.mvc.static-path-pattern=/resources/**
 #修改默认的静态寻址资源目录
-spring.resources.static-locations = classpath:/static/css,classpath:/static/images/
+spring.resources.static-locations = classpath:/static/,classpath:/templates/,classpath:/resources/
 #spring.resources.static-locations = classpath:/templates/,classpath:/resources/,classpath:/static/
 # mybatis 配置
 mybatis.mapper-locations=classpath:mapping/*.xml
