--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>Sqlserver_springboot</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Sqlserver_springboot</name>
-    <packaging>jar</packaging>
+    <packaging>War</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.10</version>
+            <version>1.1.18</version>
         </dependency>
 
         <dependency>
